--- a/Lec Notes.tex
+++ b/Lec Notes.tex
@@ -2423,5 +2423,45 @@ Generalize: $F:O\subseteq \rr^k$, open, $\to \rr^N, C^1$. Assume $DF(x_0)$ has s
 
 If a function has all points invertible, then by the inverse function theorem, the image is open. Then it can't be compact. 
 
+\subsection{Lagrange Multipliers}
+
+\underline{Case 1:} Surfaces in $\rr^3$. Let $X=(x,y,z)\in \rr^3$, let $g:\rr^3\to \rr, C^1$. Let $S=\{(x,y,z)|g(x,y,z)=0\}$. Assume $\nabla g(x)\neq 0$ if $g(x)=0$. Let $f:\rr^3\to \rr, C^1, x_0\txt{s.t.}f(x_0)\leq f(x)\fora x\in S$ or $f(x_0)\geq f(x)\fora x\in S$. Then $\exists \lambda\in \rr$ such that \begin{align*}
+    \nabla f(x_0)=\lambda\nabla g(x_0)
+\end{align*}This is the Lagrange multiplier.
+
+\textbf{Proof:} WLOG $\partials{g}{z}(x_0,y_0,z_0)\neq 0$. By the implicit function theorem $\exists h:B_r(x_0,y_0)\to \rr\txt{s.t.}\{x,y,h(x,y)\}$ agrees with $S$ in a neighborhood of $X_0$. Then look at $\phi:B_r(x_0,y_0)\to \rr, \phi(x,y)=f(x,y,h(x,y))=f(H)$ for the purposes of the chain rule; has an unconstrained (internal) minimum or maximum at $(x_0,y_0)$, then $\nabla \phi (x_0,y_0)=0$. By the chain rule \begin{align*}
+    \nabla \phi(x_0,y_0)&=\nabla f(x_0,y_0,h(x_0,y_0))DH(x_0,y_0)\\
+    &=\nabla f(X_0)\begin{bmatrix}
+        1 & 0 \\
+        0 & 1 \\
+        \partials{h}{x}(x_0,y_0) & \partials{h}{y}(x_0,y_0)
+    \end{bmatrix}
+\end{align*}The column vectors are the tangent vectors to the surface at $(x_0,y_0)$. Thus $\nabla f(X_0)\perp T_1, T_2$. We know $\nabla g(X_0)\neq 0$ is also normal to $S$. Then $\nabla f(X_0)$ is a scalar multiple of $\nabla g(X_0)$. We call that scalar $\lambda$.
+
+\underline{Remark:} The same argument can be used for the case of $g:\rr^n\to \rr, C^1, M=\{X|g(X)=0\}$, assuming $\nabla g(X)\neq 0$ if $g(X)=0$. Then $f:\rr^n\to \rr, C^1, x_0\in M$ such that $f(x_0)\leq f(x)\fora x\in M$ or $f(x_0)\geq f(x)\fora x\in M$. Then $\exists \lambda\in \rr^n$ such that $\nabla f(x_0)=\lambda\nabla g(x_0)$.
+
+\textbf{Theorem:} $\exists \lambda_1, \lambda_2\in \rr$ such that \begin{align*}
+    \nabla f(X_0)=\lambda_1\nabla g_1(X_0)+\lambda_2\nabla g_2(X_0)
+\end{align*}
+
+\textbf{Proof:} WLOG, $D_{y,z}(g,h)(x_0,y_0,z_0)$ is invertible. By the implicit function theorem $\exists \gamma:(x_0-r,x_0+r)\to \rr^2, C^1, (x,\gamma(x))$ agrees with $C$ in a neighborhood of $X_0$. Let $\phi(x)=f(x,\gamma(x)), \phi:(x_0-r,x_0+r)\to \rr$. Then $\phi$ has an unconstrained minimum (or maximum) at $x_0$, $\phi'(x_0)=0$. By the chain rule, \begin{align*}
+    \nabla f(x_0,\gamma(x_0))\begin{bmatrix}
+        1\\
+        \gamma'(x_0)
+    \end{bmatrix}=0
+\end{align*}Recall that $\nabla g(x_0),\nabla h(x_0)$ are linearly independent. Then the vectors are orthogonal to $T$ where $T$ was the matrix above. Then span of $(\nabla g(x_0), \nabla h(x_0))$ is the span of $T$ and so $\nabla f(x_0,\gamma(x_0))$ is a linear combination of $\nabla g(x_0), \nabla h(x_0)$.
+
+\underline{Application:} (don't tell Adam) Let $A$ be an $n\times n$ symmetric real matrix. Let $\lambda=\min_{\|x\|=1}\iprod{Ax,x}$. Then $\lambda$ is an eigenvalue of $A$.
+
+\textbf{Proof:} $g(x)=\|x\|^2, f(x)=\iprod{Ax,x}$ At a minimizer, $\nabla f(x_0)=\lambda x_0$. Then $\exists \lambda\in \rr$ such that $\nabla f(x_0)=\lambda\nabla g(x_0)$.
+
+\underline{Lemma:} If $f(x)=\iprod{Ax, x}$, then $\nabla f(x)=2Ax$.
+
+\textbf{Proof:} \begin{align*}
+    \lim_{t\to 0}\frac{f(x+te_i)-f(x)}{t}&=\lim_{t\to 0}\frac{\iprod{A(x+te_i),x+te_i}-\iprod{Ax,x}}{t}\\
+    &=\lim_{t\to 0}\frac{t\iprod{Ax, e_i}+t\iprod{Ae_i,x}+t^2\iprod{Ae_i,e_i}}{t}\\
+    &=\iprod{Ax,e_i}+\iprod{Ae_i,x}\\
+    &=2\iprod{Ax,e_i}
+\end{align*}
 
 \end{document}
